refactor: update tests to use JUnit 5